[package]
name = "rust_webserver_test"
version = "0.1.0"
authors = ["Marius Reimer <reime005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.4.0"
env_logger = "0.8.1"
juniper = "0.14.2"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
